Fix button spacing and color for books

--- a/styles.css
+++ b/styles.css
@@ -84,7 +84,7 @@ tr {
 }
 
 th, td {
-    padding: 1rem clamp(5px, 7vw, 7rem);
+    padding: 0.7rem clamp(5px, 6vw, 7rem);
     font-weight: 500;
     text-align: center;
 }
@@ -103,4 +103,20 @@ td > button {
 button:hover {
     background-color: black;
     color: white;
+}
+
+.delete {
+    padding: 0;
+}
+
+.delete > button {
+    background-color: #ff4466;
+    font-size: 1rem;
+    padding: 0.4rem 1rem;
+    border: none;
+    color: white;
+}
+
+.delete > button:hover {
+    background-color: #dd2222;
 }
